--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.beiing.animationdemo.MainActivity">
+
+   <android.support.v7.widget.Toolbar
+       android:id="@+id/toolbar"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:background="?attr/colorPrimary"
+       app:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
+       app:titleTextColor="@android:color/white"/>
 
    <Button
        android:layout_width="match_parent"
@@ -24,6 +33,30 @@
        android:onClick="TestBehavior"
        />
 
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="转场动画"
+       android:transitionName="share_btn"
+       android:onClick="TestTransition"
+       />
+
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="图片列表"
+       android:onClick="imageList"
+       />
+
+   <Button
+       android:id="@+id/share_btn2"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:transitionName="share_btn2"
+       android:text="activity动画"
+       android:onClick="animateActivity"
+       />
+
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -37,3 +70,5 @@
        android:layout_height="wrap_content" />
 
 </LinearLayout>
+
+</ScrollView>
