--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,14 @@
        android:onClick="viewpagerActivity"
        />
 
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:transitionName="share_btn2"
+       android:text="Animator"
+       android:onClick="AnimatorActivity"
+       />
+
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
